[package]
name = "lisp"
version = "0.1.0"
authors = ["Christoph Landgraf <christoph.landgraf@contact-software.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = "2.33.3"
logos = "0.11.4"
rustyline = "7.0.0"
